<resources>
    <string name="app_name">LifeRPG Tasks</string>
    <string name="facebook_app_id">471263939742325</string>
    <string name="facebook_app_link">https://fb.me/473226542879398</string>
    <string name="vk_short_link">http://vk.cc/4HqXq3</string>
    <string name="title">Title:</string>
    <string name="new_task_title_edit_text">Type task title</string>
    <string name="add_increasing_skill_to_task">Add increasing skill</string>
    <string name="add_decreasing_skill_to_task">Add decreasing skill</string>
    <string name="add_new_task">New task</string>
    <string name="related_skills">Related skills:</string>
    <string name="increasing_skills_list">Increasing skills:</string>
    <string name="decreasing_skills_list">Decreasing skills:</string>
    <string name="characteristic_level">Level:</string>
    <string name="characteristic_related_skills">Can be improved by enhancing next skills:</string>
    <string name="edit_task">Edit</string>
    <string name="do_task">DO</string>
    <string name="repeat">Repeat</string>
    <string name="task_finished">Task finished.</string>
    <string name="all_tasks">All</string>
    <string name="every_day_tasks">Dailies</string>
    <string name="simple_tasks">To do</string>
    <string name="finished_tasks">Done</string>
    <string name="tasks">Tasks</string>
    <string name="difficulty">Difficulty:</string>
    <string name="importance">Importance:</string>
    <string name="fear">Fear:</string>
    <string name="date">Date:</string>
    <string name="tasks_order_title">Tasks order</string>
    <string name="completion_task_order">Completion</string>
    <string name="title_asc_task_order">Name asc.</string>
    <string name="title_desc_task_order">Name desc.</string>
    <string name="importance_ask_task_order">Importance asc.</string>
    <string name="importance_desc_task_order">Importance desc.</string>
    <string name="difficulty_asc_task_order">Difficulty asc.</string>
    <string name="difficulty_desc_task_order">Difficulty desc.</string>
    <string name="fear_asc_task_order">Fear asc.</string>
    <string name="fear_desc_task_order">Fear desc.</string>
    <string name="date_asc_task_order">Date asc.</string>
    <string name="date_desc_task_order">Date desc.</string>
    <string name="sort_image">Sort image</string>
    <string name="task_performed">Task successfully performed\n</string>
    <string name="close">Close</string>
    <string name="done">done!</string>
    <string name="undo">Undo</string>
    <string name="show_notification">Task notification will be shown.</string>
    <string name="overdue">- overdue!</string>
    <string name="task_already_done">This task has been already done. Are you sure you want to make this task active?</string>
    <string name="empty_tasks_list_view">There are no tasks in current category. To add new task press button +</string>
    <string name="empty_done_list_view">There are no done task yet.</string>
    <string name="no_related_skills">This task doesn\'t have related skills yet. Press edit button to add new related skills.</string>
    <string name="task">Task</string>
    <string name="removing_task_description">Are you really want to remove this task?</string>
    <string name="edit_task_title">Edit task</string>
    <string name="empty_title_task_error">Task title can\'t be empty</string>
    <string name="finish_edit_task_message">Task edit finished</string>
    <string name="task_duplicate_error">Another task with same title is already exists. Rewrite?</string>
    <string name="task_duplicate_negative_answer">No, change current task title</string>
    <string name="new_task_added">Task added: </string>
    <string name="skill_choosing">Choose skill to add</string>
    <string name="task_date_termless">Termless</string>
    <string name="task_date_today">Today</string>
    <string name="task_date_tomorrow">Tomorrow</string>
    <string name="task_date_specify_date">Specify date…</string>
    <string name="task_repeat_do_not_repeat">Do not repeat</string>
    <string name="simple_repeat">Simple repeat</string>
    <string name="task_add_notification">Add notification</string>
    <string name="is_whole_day_task">Whole day</string>
    <string name="task_repeat_every_day">Every day</string>
    <string name="task_repeat_every_Nth_day">Every %1d day</string>
    <string name="task_repeat_every_week">Every week</string>
    <string name="task_repeat_every_Nth_week">Every %1d week</string>
    <string name="task_repeat_every_month">Every month</string>
    <string name="task_repeat_every_Nth_month">Every %1d month</string>
    <string name="task_repeat_every_year">Every year</string>
    <string name="task_repeat_every_Nth_year">Every %1d year</string>
    <string name="task_repeat_custom">Custom…</string>
    <string name="repeat_every">Repeat every</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="days_after_completion">days after completion</string>
    <string name="just_repeat">Just repeat</string>
    <string name="repeat_after_completion">Repeat after completion</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday_short">Sun</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="Thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="always">Always</string>
    <string name="number_of_times">Number of times</string>
    <string name="repeats">Repeats</string>
    <string name="infinite">Infinite</string>
    <string name="do_not_notify">Do not notify</string>
    <string name="notify">Notify:</string>
    <string name="notify_1_minute_before">1 minute before</string>
    <string name="notify_10_minute_before">10 minutes before</string>
    <string name="notify_60_minute_before">60 minutes before</string>
    <string name="notify_N_minutes_before">%1d minutes before</string>
    <string name="notify_1_hour_before">1 hour before</string>
    <string name="notify_N_hours_before">%1d hours before</string>
    <string name="notify_1_day_before">1 day before</string>
    <string name="notify_N_days_before">%1d days before</string>
    <string name="notify_1_week_before">1 week before</string>
    <string name="notify_N_weeks_before">%1d weeks before</string>
    <string name="notify_custom">Custom…</string>
    <string name="notify_custom_dialog_title">Custom notification</string>
    <string name="notify_minutes">min.</string>
    <string name="notify_minutes_checked">min. before</string>
    <string name="notify_hours">h.</string>
    <string name="notify_hours_checked">h. before</string>
    <string name="notify_days">d.</string>
    <string name="notify_days_checked">d. before</string>
    <string name="notify_weeks">w.</string>
    <string name="notify_weeks_checked">w. before</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="insane">Insane</string>
    <string name="start_generating_habit">Start generating habit</string>
    <string name="generate_habit">Generate habit</string>
    <string name="generating_habit">Generating habit, %1d days left</string>
    <string name="rewrite_habit_alert_message">Start new generation or continue previous?</string>
    <string name="habit_new">New</string>
    <string name="habit_continue">Previous</string>
    <string name="habit_stop_generating">Remove</string>
    <string name="habit_generation_finished">Finished generating habit for task "%1s"</string>
    <string name="habit_generation_failed">Failed generating habit for task "%1s". Restarting…</string>
    <string name="new_item_title">Title:</string>
    <string name="new_skill_title_edit_text">type skill title</string>
    <string name="key_characteristic">Related characteristics:</string>
    <string name="key_characteristic_empty">Add related characteristics</string>
    <string name="create_new_skill">Add new skill</string>
    <string name="add_new_skill">New skill</string>
    <string name="new_skill">Add new skill</string>
    <string name="edit">Edit</string>
    <string name="increases">Increases: </string>
    <string name="tasks_enhancing_skill">Skill XP may be increased by performing next tasks:
    </string>
    <string name="level">Level:</string>
    <string name="skill_xp">Skill XP:</string>
    <string name="to_next_lvl">Points left to next level:</string>
    <string name="empty_skill_title_error">Skill title can\'t be empty</string>
    <string name="no_key_characteristic_error">Key characteristic should be set</string>
    <string name="skill_duplicate_error">Skill with same title already exists. Overwrite?</string>
    <string name="skill_duplicate_error_no_question">Skill with same title already exists.</string>
    <string name="skill_added_message">Skill added</string>
    <string name="skill_updated_message">Skill updated</string>
    <string name="removing_skill_message">Are you really want to remove this skill?</string>
    <string name="skill">Skill</string>
    <string name="skills">Skills:</string>
    <string name="edit_hero">Edit</string>
    <string name="hero_name">Name:</string>
    <string name="hero_level">Level</string>
    <string name="hero_name_hint_edit_hero_fragment">Your hero name.</string>
    <string name="change_hero_icon">Change picture</string>
    <string name="edit_hero_fragment_title">Edit hero</string>
    <string name="hero_level_increased">Congratulations!\n%1s\'s level increased!</string>
    <string name="change_characteristic">Change characteristic</string>
    <string name="characteristics_chart">Characteristics chart</string>
    <string name="skills_chart">Skills chart</string>
    <string name="hero_fragment_name">Hero</string>
    <string name="characteristics_fragment_name">Characteristics</string>
    <string name="skills_fragment_name">Skills</string>
    <string name="share">Share(+XP)</string>
    <string name="share_with_xp">Share(+%.2f XP)</string>
    <string name="no_internet">There are no active internet connection. Please enable connection to share.</string>
    <string name="please_login">You are not logged in. Please log in.</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="g_plus">Google+</string>
    <string name="vk">Vkontakte</string>
    <string name="share_additional_xp">Share to get additional XP</string>
    <string name="XP_gained"> %.2f XP!</string>
    <string name="GA_action">Action</string>
    <string name="GA_add_new_task">Add new task</string>
    <string name="GA_add_new_skill">Add new skill</string>
    <string name="GA_task_performed">Task performed</string>
    <string name="GA_task_performed_internet">Task performed with internet</string>
    <string name="GA_ad_shown">Ad shown</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="strength">Strength</string>
    <string name="stamina">Stamina</string>
    <string name="dexterity">Dexterity</string>
    <string name="skip">Skip</string>
    <string name="cost">Cost:</string>
    <string name="new_reward_title_edit_text">Type reward title</string>
    <string name="description">Description:</string>
    <string name="reward_description_edit_text">Type description</string>
    <string name="reward_cost_edit_text">Type cost</string>
</resources>