<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/perform_task"
        android:icon="@drawable/ic_done_black_24dp"
        android:orderInCategory="3"
        android:title="@string/do_task"
        app:showAsAction="always" />

    <item
        android:id="@+id/undo_task"
        android:orderInCategory="4"
        android:icon="@drawable/ic_undo_black_24dp"
        android:title="@string/undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/skip_task"
        android:orderInCategory="2"
        android:icon="@drawable/ic_rotate_90_degrees_ccw_black_24dp"
        android:title="@string/skip"
        app:showAsAction="always" />

</menu>