<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/save_zone_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/add_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                style="@style/LifeRPGTextInListStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <EditText
                android:id="@+id/reward_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_reward_title_edit_text" />
        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <LinearLayout
            android:id="@+id/reward_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/LifeRPGTextInListStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/reward_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reward_description_edit_text" />
        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <LinearLayout
            android:id="@+id/cost_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/LifeRPGTextInListStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost" />

            <EditText
                android:id="@+id/reward_cost_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/reward_cost_edit_text"
                android:gravity="center"
                android:inputType="number"
                android:maxEms="5"
                android:maxLength="5"
                android:minEms="2"/>

            <ImageView
                android:id="@+id/gold_coin_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gold_coin_icon"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <View style="@style/HorizontalDivider" />
    </LinearLayout>

</ScrollView>