<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/LifeRPGTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hero_name" />

        <EditText
            android:id="@+id/edit_name_edit_hero_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hero_name_hint_edit_hero_fragment" />
    </LinearLayout>

    <Button
        android:id="@+id/change_hero_icon_button"
        style="@style/LifeRPGDefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_hero_icon"
        android:layout_below="@id/name_layout"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/edit_hero_banner_ad_unit_id"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>