<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.levor.liferpg.View.CharacteristicActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/intelligenceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intelligence"
            />
        <TextView
            android:id="@+id/intelligenceLevelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/wisdomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wisdom"
            />
        <TextView
            android:id="@+id/wisdomLevelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/strengthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strength"
            />
        <TextView
            android:id="@+id/strengthLevelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/staminaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stamina"
            />
        <TextView
            android:id="@+id/staminaLevelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dexterityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dexterity"
            />
        <TextView
            android:id="@+id/dexterityLevelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</LinearLayout>
