<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/characteristic_title"
        style="@style/LifeRPGTextTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/level"
        style="@style/LifeRPGTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/characteristic_title"
        android:text="@string/characteristic_level" />

    <TextView
        android:id="@+id/level_value"
        style="@style/LifeRPGTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/characteristic_title"
        android:layout_toRightOf="@id/level" />

    <RelativeLayout
        android:id="@+id/related_skill_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/level">

        <Button
            android:id="@+id/add_skill_button"
            style="@style/LifeRPGDefaultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/create_new_skill" />

        <TextView
            style="@style/LifeRPGTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_toLeftOf="@id/add_skill_button"
            android:text="@string/characteristic_related_skills" />

    </RelativeLayout>

</RelativeLayout>